# tsutils

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  config.mk  configure.ac  fake_wrapper  pkginfo.in  prototype.in
acctexp/: .gitignore  Makefile  Makefile.am  acctexp.1  acctexp.c
acctrenew/: .gitignore  Makefile  Makefile.am  acctrenew.1  acctrenew.c
acctrenew_fake/: Makefile
date2days/: .gitignore  Makefile.am  date2days.1  date2days.c
days2date/: .gitignore  Makefile.am  days2date.1
getpasstofile/: .gitignore  Makefile  Makefile.am  getpasstofile.1  getpasstofile.c
libtsutils/: .gitignore  Makefile  Makefile.am  ldap.c  mail.c  security.c  tsutils.c  tsutils.h  write.c
listlogins/: .gitignore  Makefile.am  listlogins.1  listlogins.c
listusers/: .gitignore  Makefile  Makefile.am  listusers.c
lsexp/: .gitignore  Makefile  Makefile.am  lsexp.c
mk/: prog.mk  rules.mk  script.mk
passwd/: .gitignore  Makefile  Makefile.am  passwd
readline/: .gitignore  Makefile.am  readline.1  readline.c
resetpass/: .gitignore  Makefile  Makefile.am  resetpass.1  resetpass.c
resetpass_fake/: Makefile
setlicense/: .gitignore  Makefile  Makefile.am  setlicense.1  setlicense.c
setmail/: .gitignore  Makefile  Makefile.am  setmail.1  setmail.c
setpass/: .gitignore  Makefile  Makefile.am  setpass.1  setpass.c
setpass_fake/: Makefile  setpass
summdisk/: .gitignore  Makefile  Makefile.am  summdisk.c
watcherd/: .gitignore  Makefile  Makefile.am
whinequota/: .gitignore  Makefile  Makefile.am
whodo/: .gitignore  Makefile  Makefile.am  whodo.c
